--- a/check1.html
+++ b/check1.html
@@ -20,26 +20,14 @@
             <textarea></textarea>
             <img src="searching.png" width="8%";>
     </div> <br><br><br>   
-    <div id="line1">
-        <div> 번호 </div>
-        <div> 이름 </div>
-        <div> 전화번호 </div>
-        <div> 지점</div>
-        <div> 승인여부 </div>
-    </div>
-    <div id="line2">
-        <div>1</div>
-        <div>곰돌이</div>
-        <div>010-1234-5678</div>
-        <div>롯데마트 남원점</div>
-        <div style="color: rgb(143, 138, 138)">승인완료</div>
-    </div>
-    <div id="line3">
-        <div>2</div>
-        <div>펭수</div>
-        <div>010-1111-2222</div>
-        <div>롯데슈퍼 신당점</div>
-        <div style="color: rgb(10, 163, 10);">검토중</div>
+    <div class="container">
+        <div id="grid_table">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
     <bottom>
         <div id="number">
