--- a/check1.html
+++ b/check1.html
@@ -18,15 +18,25 @@
     <div style="float: right; display: inline-flex; margin: 1%;">
         <div id="search">전화번호 검색</div>
             <textarea></textarea>
-            <img src="searching.png" width="8%";>
+            <img src="searching.png" width="5%";>
     </div> <br><br><br>   
     <div class="container">
         <div id="grid_table">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div style="color: red;"><b>번호</b></div>
+            <div style="color: red;"><b>이름</b></div>
+            <div style="color: red;"><b>전화번호</b></div>
+            <div style="color: red;"><b>지점</b></div>
+            <div style="color: red;"><b>승인여부</b></div>
+            <div>1</div>
+            <div>곰돌이</div>
+            <div>010-1234-5678</div>
+            <div>롯데마트 남원점</div>
+            <div style="color: rgb(5, 172, 5);"><b>검토중</b></div>
+            <div>2</div>
+            <div>펭수</div>
+            <div>010-1111-2222</div>
+            <div>롯데슈퍼 신당점</div>
+            <div style="color: grey;"><b>승인 완료</b></div>
         </div>
     </div>
     <bottom>
